Fix playdar powered alignment

--- a/public/playlick.css
+++ b/public/playlick.css
@@ -42,7 +42,7 @@ h1#title {
     font-size: 18px;
 }
 h1#title span#powered {
-    margin-top: 3px;
+    margin-top: 7px;
     float: right;
     vertical-align: middle;
 }
